--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,7 @@
 {
     "singleQuote": false,
+    "quoteProps": "preserve",
     "trailingComma": "es5",
-    "semi": false
+    "semi": true
   }
   
