--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "crowd-sourced-fitness-challenge-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Root config for managing linting and general tasks",
   "type": "module",
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@expo/metro-config": "^0.18.11",
-    "@types/react": "~18.2.79",
-    "@types/react-native": "^0.72.8",
     "@typescript-eslint/eslint-plugin": "^8.9.0",
     "@typescript-eslint/parser": "^8.9.0",
     "eslint": "^9.12.0",
@@ -26,17 +19,6 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
-    "supertest": "^7.0.0",
     "typescript": "5.5"
-  },
-  "dependencies": {
-    "@react-native-community/cli-server-api": "^15.0.0",
-    "expo": "^51.0.38",
-    "metro": "^0.76.0",
-    "metro-config": "^0.76.0",
-    "react-native": "^0.76.0",
-    "react-native-web": "~0.19.10",
-    "react-dom": "18.2.0",
-    "@expo/metro-runtime": "~3.2.3"
   }
 }
