--- a/fitness_challenge/.gitignore
+++ b/fitness_challenge/.gitignore
@@ -1,4 +1,5 @@
 node_modules/
+.env.frontend
 .expo/
 dist/
 npm-debug.*
@@ -9,7 +10,6 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-
 # macOS
 .DS_Store
 
