--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitness_challenge",
+  "name": "react_native_frontend",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -9,17 +9,15 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --fix"
+    "lint": "expo lint"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-community/cli-server-api": "^15.0.0",
     "@react-navigation/native": "^6.0.2",
-    "expo": "^51.0.38",
+    "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
@@ -28,11 +26,9 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
-    "metro": "^0.80.12",
-    "metro-config": "^0.80.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "^0.74.5",
+    "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
