--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "lint": "eslint .",
-    "lint:fix": "eslint react_native_frontend/ test_backend/ --fix"
+    "lint:fix": "eslint react_native_frontend/ test_backend/ supabase/ --fix"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^8.11.0",
@@ -20,5 +20,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "typescript": "5.5"
+  },
+  "dependencies": {
+    "supabase": "^1.207.9"
   }
 }
