supabase/users CRUD options work when tested locally (although it gives inaccurate error messages)

--- a/supabase/functions/users/tsconfig.json
+++ b/supabase/functions/users/tsconfig.json
@@ -1,8 +1,9 @@
 {
-    "compilerOptions": {
-      "target": "esnext",
-      "module": "esnext",
-      "strict": true
-    },
-    "include": ["**/*.ts"]
+  "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "lib": ["ESNext", "DOM"],
+    "strict": true,
+    "esModuleInterop": true
   }
+}
