--- a/supabase/tsconfig.json
+++ b/supabase/tsconfig.json
@@ -4,6 +4,12 @@
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
     "strict": true,
-    "esModuleInterop": true
-  }
+    // "types": ["deno.ns"]  // Include Deno-specific types
+    "types": ["deno.ns", "deno.unstable"]
+    // "esModuleInterop": true    
+  },
+  "include": [
+    "functions/**/*.ts" // Adjust this path based on where your functions are located
+  ]
 }
+
