--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -38,6 +38,7 @@
     "react-native-appearance": "^0.3.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.14.0",
