--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/cli-server-api": "^15.0.0",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.2.5",
