--- a/react_native_frontend/package.json
+++ b/react_native_frontend/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.2.5",
+    "@reduxjs/toolkit": "^2.3.0",
     "@supabase/supabase-js": "^2.45.6",
     "dotenv": "^16.4.5",
     "expo": "~51.0.39",
@@ -43,7 +44,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.14.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
