--- a/react_native_frontend/tsconfig.json
+++ b/react_native_frontend/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/*": ["./*"]
     },
+    "noImplicitAny": true,
     "target": "es6",
     "module": "esnext",
     "lib": ["dom", "dom.iterable", "esnext"],
